Update x-pack/plugin/downsample/src/internalClusterTest/java/org/elasticsearch/xpack/downsample/DownsampleTransportFailureIT.java
Co-authored-by: Ievgen Degtiarenko <ievgen.degtiarenko@gmail.com>